--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Driving Test</title>
     <link rel="stylesheet" href="/src/css/style.css" />
   </head>
   <body>
+    <section class="progress-bar-container">
+      <label for="progress-bar">Loading...</label>
+      <progress id="progress-bar" value="0" max="100"></progress>
+    </section>
     <script type="module" src="src/js/main.js"></script>
   </body>
 </html>
