--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       <label for="progress-bar">Loading...</label>
       <progress id="progress-bar" value="0" max="100"></progress>
     </section>
+    <section class="header">
+      <h1>Driving Test Quiz</h1>
+      <button>Start</button>
+    </section>
     <script type="module" src="src/js/main.js"></script>
   </body>
 </html>
