--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
       <h1>Driving Test Quiz</h1>
       <button>Start</button>
     </section>
+    <section class="questions">
+      <p>Q1: in which order may the vehicles proceed?</p>
+      <ul>
+        <li id="option1"><span id="a1-text">Blue, yellow, red</span><span id="a1-symbol"></span></li>
+        <li id="option2"><span id="a2-text">Red, yellow, blue</span><span id="a2-symbol"></span></li>
+        <li id="option3"><span id="a3-text">Red, blue, yellow</span><span id="a3-symbol"></span></li>
+      </ul>
+    </section>
+    <section class="explanation">
+      <button>Next Question</button>
+      <div class="text-wrapper">
+          <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Cras at leo vel lorem iaculis ultrices at et justo.
+              Phasellus semper, ligula in aliquam placerat, dui velit suscipit lacus,
+              eu tincidunt magna urna vitae ligula. Pellentesque vitae risus faucibus,
+              accumsan tortor in, cursus nisi. Quisque fermentum ligula non viverra commodo.
+          </p>
+      </div>
+  </section>
     <script type="module" src="src/js/main.js"></script>
   </body>
 </html>
