--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <label for="progress-bar">Loading...</label>
       <progress id="progress-bar" value="0" max="100"></progress>
     </section>
+    <p class="score">Score: <span id="score">0</span> / 7</p>
     <section class="header">
       <h1>Driving Test Quiz</h1>
       <button>Start</button>
